# Wirecut-QAOA

./: .gitignore  README.md  RUN_BEFORE_COMMIT.sh  __init__.py
experiments/GHZ-Wirecut/: Comparison_pauli_randomized.ipynb  GHZ_pauli_wire_cut.py  GHZ_pauli_wire_cut_example.ipynb  GHZ_random_measurements.py  GHZ_random_wire_cut_example.ipynb  GHZ_random_wire_cut_with_impl.ipynb  __init__.py  benchmark.py  circuit_gate.py  original_circuit.py  quantum_channel.py  setup.py  subcircuit_contribution.py  subcircuit_measurement.py  subcircuit_pauli.py  subcircuit_position.py  subcircuit_random.py
experiments/QAOA-Notebook/: Quantum Approxmate Optimization Algorithm.ipynb
experiments/QAOA-Wirecut/: QAOA_MAXCUT_Wirecut.ipynb  circuit.py  circuit_interface.py  classical_computer.py  experiment_configuration.py  experiment_result.py  graph.py  measurement.py  noise_manager.py  quantum_backend.py  results_manager.py  wire_cut_circuit.py  wire_cut_qaoa.py
local_packages/utils/: README.md  __init__.py  qaoa_utils.py  quantum_hardware_utils.py  quantum_utils.py  quantum_wire_cutting.py  setup.py
optimization_utils/: pyproject.toml
optimization_utils/src/optimization_utils/: __init__.py  spsa.py
optimization_utils/src/optimization_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quantum_utils/: pyproject.toml
quantum_utils/src/quantum_utils/: __init__.py  qaoa_utils.py  quantum_wire_cutting.py
quantum_utils/src/quantum_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_microlib.py
tests/quantum_utils/: test_BarChart.py  (+7 more)
(+13 files in other folders)
