[project]
name = "quantum_utils"
version = "0.1.0"
description = "Quantum utils"
readme = "README.md"
authors = [{ name = "Michel Meulen", email = "michel.meulen@outlook.com" }]
requires-python = ">=3.8"
keywords = ["type-checking", "mypy", "example"]
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/Mitch36/Wirecut-QAOA"